2007-09-26  Inge Wallin  <inge@lysator.liu.se>

	APIDOX
	* src/lib/MarbleModel.h: More apidox
	* src/lib/MarbleModel.cpp: Improve comments
	
2007-09-26  Torsten Rahn  <rahn@kde.org>
	
	- Correct legend terms (deeply sorry for the translation team).
	  Added shipwreck category.

	* src/lib/MarbleWidget.{h,cpp}:
	* src/lib/PlaceMarkLayout.cpp:
	* src/lib/XmlHandler.cpp:
	* src/lib/PlaceMarkContainer.cpp:
	* src/lib/MarbleLegendBrowser.{h,cpp}:
	* src/lib/PlaceMarkManager.cpp:
	* src/lib/ViewParams.h:
	* src/lib/PlaceMarkInfoDialog.cpp:
	* src/lib/MarbleControlBox.cpp:
	* src/lib/PlaceMark.cpp:
	* data/placemarks/baseplacemarks.cache:
	* data/placemarks/elevplacemarks.cache:
	* data/placemarks/otherplacemarks.kml:
	* data/placemarks/otherplacemarks.cache:
	* data/legend.html:

2007-09-26  Torsten Rahn  <rahn@kde.org>
	* src/lib/TextureColorizer.cpp:
	* src/lib/texturepalette.cpp:
	* src/lib/MarbleModel.h:
	* tools/palettegen/palettegen.cpp:
	- Highlights for mountains
	- Fixed bug introduced by ingwa

2007-09-26  Torsten Rahn  <rahn@kde.org>
	* src/lib/PlaceMarkLayout.{h,cpp}:
	- Adding placeMarksOnScreenLimit()

	* src/lib/TextureColorizer.cpp:
	- Optimization

2007-09-25  Torsten Rahn  <rahn@kde.org>

	* src/lib/PlaceMarkLayout.cpp:
	* src/lib/PlaceMarkPainter.{h,cpp}:
	- More polishing in the layout/painter 
	  classes.

	* src/lib/TextureColorizer.cpp:
	* src/lib/texturepalette.cpp:
	* src/lib/ClipPainter.cpp:
	* tools/palettegen/palettegen.cpp:
	- Fixing tiny bug to improve render quality.
	- preparing further improved relief rendering.

2007-09-25  Inge Wallin  <inge@lysator.liu.se>

	APIDOX
	* src/lib/MarbleModel.h: Add apidox
	* src/lib/MarbleModel.cpp: Improve comments
	
	Make BUGS file actually usable.
	* BUGS: Format better to make it readable
	
2007-09-25  Torsten Rahn  <rahn@kde.org>

	* src/lib/PlaceMarkModel.{h,cpp}:
	* src/lib/PlaceMarkPainter.{h,cpp}:
	* src/lib/PlaceMarkLayout.{h,cpp}:
	* src/lib/VisiblePlaceMark.{h,cpp}:
	* src/lib/CMakeLists.txt: