@@ -8,16 +8,20 @@
 // Copyright 2007   Andrew Manson   <g.real.ate@gmail.com>
 //
 
+
 #ifndef GPXFILEMODEL_H
 #define GPXFILEMODEL_H
 
+
 #include "GpxFile.h"
-#include "BoundingBox.h"
 
 #include <QtCore/QAbstractItemModel>
 #include <QtGui/QItemSelectionModel>
 #include <QtCore/QVariant>
 #include <QtCore/QVector>
+
+#include "BoundingBox.h"
+
 
 /**
 *	@author Andrew Manson <g.real.ate@gmail.com>
@@ -25,6 +29,7 @@
 class GpxFileModel : public QAbstractItemModel
 {
      Q_OBJECT
+
 Q_SIGNALS :
     void updateRegion( BoundingBox );
     void enableActions( bool );
@@ -41,22 +46,20 @@ public:
     QVariant data( const QModelIndex &index, 
                    int role = Qt::DisplayRole ) const;
     bool setData ( const QModelIndex & index, const QVariant & value,
-                   int role );
+                   int role = Qt::EditRole );
     QModelIndex index ( int row, int column, 
-                        const QModelIndex &parent = QModelIndex() )
-                                                                const;
+                        const QModelIndex &parent = QModelIndex() ) const;
     QModelIndex parent ( const QModelIndex & index ) const;
-    int rowCount ( const QModelIndex & parent = QModelIndex() ) const;
-    int columnCount ( const QModelIndex & parent = QModelIndex() )
-                                                                const;
+    int rowCount ( const QModelIndex & parent = QModelIndex() )     const;
+    int columnCount ( const QModelIndex & parent = QModelIndex() )  const;
     void addFile( GpxFile *file);
     void setSelectedIndex( const QModelIndex &);
     QVector<GpxFile*>* allFiles();
-    private:
-    QModelIndex         m_selectedIndex;
-    QVector<GpxFile*>   *m_data;
-    
 
+ private:
+    QModelIndex         m_selectedIndex;
+    QVector<GpxFile*>  *m_data;
 };
+
 
 #endif
